feat(restaurant): implement menu and food relationships
- Add menus list to RestaurantDto for complete data representation
- Add OneToMany relationship in Restaurant entity for menus
- Implement getTypesFoods method using FoodTypeRepository
- Add nested DTOs mapping for menu and food items
- Inject FoodTypeRepository for food types retrieval
- Update toDto methods to include complete hierarchical data